corrected zooming for search input on ios

--- a/src/app/component/search-input/search-input.scss
+++ b/src/app/component/search-input/search-input.scss
@@ -12,6 +12,9 @@ div {
         border: none;
         background: none;
         text-align: left;
+        font-size: 16px;
+        transform: scale(0.9);
+        margin-left: -5%;
         // background: red;
         width: 100%;
         height: 100%;
